Fix "individual-card-item" gap size

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ nav img {
 
 .card-work-item {
   background-color: #ebf0ee;
-  margin: 20px;
+  margin: 24px;
   width: 327px;
   height: 474px;
   border: 1px solid #d0d9d4;
